--- a/public/menu.html
+++ b/public/menu.html
@@ -212,6 +212,20 @@
         </div>
     </div>
   </div>
+  <div id="schedule-modal-overlay" class="prompt-overlay hidden">
+    <div class="prompt-modal" style="width: 90%; max-width: 400px; padding: 20px;">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
+            <h3 style="margin: 0; font-size: 18px;">📅 Расписание стримов</h3>
+            <button id="schedule-modal-close-btn" class="promo-notification-close" style="background: rgba(255,255,255,0.1); width: 30px; height: 30px;">&times;</button>
+        </div>
+        
+        <img src="https://i.postimg.cc/NMw2ByPZ/raspisanie-strimov.jpg" alt="Расписание" style="width: 100%; border-radius: 12px; margin-bottom: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.5);">
+        
+        <a href="https://www.twitch.tv/hatelove_ttv" target="_blank" class="confirm-btn" style="text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 8px; background-color: #9146ff; color: white;">
+            <i class="fa-brands fa-twitch"></i> Перейти на канал
+        </a>
+    </div>
+</div>
 
   <div id="custom-prompt-overlay" class="prompt-overlay hidden">
     <div class="prompt-modal">
