--- a/public/menu.html
+++ b/public/menu.html
@@ -294,6 +294,26 @@
         </div>
     </div>
   </div>
+  <div id="subscription-success-modal" class="custom-popup-overlay hidden">
+      <div class="custom-popup">
+          <div style="font-size: 40px; margin-bottom: 10px;">🎉</div>
+          <h3>Поздравляем!</h3>
+          <p style="color:#ccc; font-size:13px; line-height:1.4;">
+              Подписка подтверждена.<br>
+              <span style="color: #FFD700; font-weight: bold;">Стартовый пак начислен!</span>
+          </p>
+          
+          <div class="popup-actions" style="display:flex; flex-direction:column; gap:10px;">
+              <a href="/events" class="popup-btn primary" style="text-decoration: none; display: flex; align-items: center; justify-content: center; background: #FFD700; color: #000;">
+                  <i class="fa-solid fa-fire" style="margin-right: 8px;"></i> Перейти в Гринд
+              </a>
+
+              <button id="success-close-btn" class="popup-btn secondary">
+                  🏠 В главное меню
+              </button>
+          </div>
+      </div>
+  </div>
 
   <script src="/public/menu.js"></script>
 </body>
