--- a/public/menu.html
+++ b/public/menu.html
@@ -38,10 +38,10 @@
       <div class="stats-block">
         <div class="social-stats-wrapper">
           <div class="social-links">
-            <a href="https://t.me/hatelovettv" target="_blank" rel="noopener noreferrer" class="stats-link">
+            <a href="#" onclick="Telegram.WebApp.openTelegramLink('https://t.me/hatelovettv'); return false;" class="stats-link">
                 <div class="social-icon-wrapper" id="telegram-icon"><i class="fa-brands fa-telegram"></i></div>
             </a>
-            <a href="https://www.twitch.tv/hatelove_ttv" target="_blank" rel="noopener noreferrer" class="stats-link">
+            <a href="#" onclick="Telegram.WebApp.openLink('https://www.twitch.tv/hatelove_ttv'); return false;" class="stats-link">
                 <div class="social-icon-wrapper" id="twitch-icon"><i class="fa-brands fa-twitch"></i></div>
             </a>
           </div>
@@ -221,9 +221,9 @@
         
         <img src="https://i.postimg.cc/NMw2ByPZ/raspisanie-strimov.jpg" alt="Расписание" style="width: 100%; border-radius: 12px; margin-bottom: 20px; box-shadow: 0 4px 15px rgba(0,0,0,0.5);">
         
-        <a href="https://www.twitch.tv/hatelove_ttv" target="_blank" class="confirm-btn" style="text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 8px; background-color: #9146ff; color: white;">
+        <button onclick="Telegram.WebApp.openLink('https://www.twitch.tv/hatelove_ttv')" class="confirm-btn" style="width: 100%; text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 8px; background-color: #9146ff; color: white; border: none; cursor: pointer; font-size: 14px; font-weight: 600; padding: 12px;">
             <i class="fa-brands fa-twitch"></i> Перейти на канал
-        </a>
+        </button>
     </div>
 </div>
 
