--- a/public/profile.html
+++ b/public/profile.html
@@ -566,13 +566,17 @@
         </div>
     </div>
 
-    <div id="how-to-use-popup" class="custom-popup-overlay">
+   <div id="how-to-use-popup" class="custom-popup-overlay">
         <div class="custom-popup">
             <h3>Как использовать код?</h3>
-            <p>Активируйте промокод в боте.</p>
+            <p>Скопируйте код и активируйте его в боте.</p>
             <img id="how-to-use-gif" src="" alt="Инструкция" style="width:100%; border-radius:10px;">
-            <div class="popup-actions" style="margin-top:15px;">
-                <button id="how-to-use-close" class="popup-btn primary">Понятно</button>
+            
+            <div class="popup-actions" style="margin-top:15px; display: flex; flex-direction: column; gap: 10px;">
+                <a href="https://t.me/HATElavka_bot" class="popup-btn primary" style="text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 8px;">
+                    <i class="fa-brands fa-telegram"></i> Открыть HATElavka
+                </a>
+                <button id="how-to-use-close" class="popup-btn secondary">Закрыть</button>
             </div>
         </div>
     </div>
