--- a/public/shop.html
+++ b/public/shop.html
@@ -1013,28 +1013,30 @@
             return text.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/"/g, "&quot;").replace(/'/g, "&#039;");
         }
 
-        initShop();
+        // --- АВТОМАТИЧЕСКОЕ ОБНОВЛЕНИЕ ПРИ СТАРТЕ И ВОЗВРАТЕ ---
 
-        // --- АВТО-ОБНОВЛЕНИЕ ПРИ ВОЗВРАЩЕНИИ В ПРИЛОЖЕНИЕ ---
-        
-        // 1. Слушаем событие Telegram "activated" (когда приложение разворачивается)
+        // 1. Запускаем при самой первой загрузке страницы
+        initShop(); 
+        // Принудительно обновляем баланс сразу же
+        checkBalance();
+
+        // 2. Слушаем, когда пользователь возвращается в приложение (разворачивает его)
         Telegram.WebApp.onEvent('activated', function() {
-            // Сбрасываем флаг загрузки, чтобы точно разрешить запрос
+            // Снимаем защиту от частого обновления
             isBalanceLoading = false; 
+            // Запускаем обновление
             checkBalance();
         });
 
-        // 2. Слушаем стандартное событие браузера (фокус окна)
-        // Это помогает, если юзер переключался между чатами
+        // 3. Слушаем, когда окно браузера/webview снова становится активным
         window.addEventListener('focus', function() {
-            // Небольшая задержка, чтобы база успела обновиться после транзакции
             setTimeout(() => {
                 isBalanceLoading = false;
                 checkBalance();
             }, 100); 
         });
         
-        // 3. Дополнительно обновляем при изменении видимости
+        // 4. Слушаем переключение вкладок/видимости
         document.addEventListener('visibilitychange', function() {
             if (!document.hidden) {
                 isBalanceLoading = false;
