--- a/public/shop.html
+++ b/public/shop.html
@@ -1017,8 +1017,16 @@
 
         // 1. Запускаем при самой первой загрузке страницы
         initShop(); 
-        // Принудительно обновляем баланс сразу же
+        
+        // ПЕРВЫЙ ЗАПРОС: Показывает кэш и триггерит обновление на сервере
         checkBalance();
+
+        // ВТОРОЙ ЗАПРОС (Через 2.5 сек): Забирает уже обновленные данные
+        setTimeout(() => {
+            // Принудительно снимаем флаг загрузки, чтобы запрос точно прошел
+            isBalanceLoading = false; 
+            checkBalance();
+        }, 2500);
 
         // 2. Слушаем, когда пользователь возвращается в приложение (разворачивает его)
         Telegram.WebApp.onEvent('activated', function() {
