--- a/public/shop.html
+++ b/public/shop.html
@@ -1013,44 +1013,22 @@
             return text.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/"/g, "&quot;").replace(/'/g, "&#039;");
         }
 
-        // --- АВТОМАТИЧЕСКОЕ ОБНОВЛЕНИЕ ПРИ СТАРТЕ И ВОЗВРАТЕ ---
+        // --- ЗАПУСК ТОЛЬКО ПРИ СТАРТЕ ---
 
-        // 1. Запускаем при самой первой загрузке страницы
+        // 1. Запускаем загрузку товаров
         initShop(); 
         
-        // ПЕРВЫЙ ЗАПРОС: Показывает кэш и триггерит обновление на сервере
+        // 2. ПЕРВЫЙ ЗАПРОС: 
+        // Показывает старый кэш и заставляет сервер начать обновление в фоне
         checkBalance();
 
-        // ВТОРОЙ ЗАПРОС (Через 2.5 сек): Забирает уже обновленные данные
+        // 3. ВТОРОЙ ЗАПРОС (Через 2.5 сек): 
+        // Автоматически подтягивает уже обновленные данные
         setTimeout(() => {
-            // Принудительно снимаем флаг загрузки, чтобы запрос точно прошел
+            // Снимаем защиту от частого нажатия, чтобы авто-запрос точно прошел
             isBalanceLoading = false; 
             checkBalance();
         }, 2500);
-
-        // 2. Слушаем, когда пользователь возвращается в приложение (разворачивает его)
-        Telegram.WebApp.onEvent('activated', function() {
-            // Снимаем защиту от частого обновления
-            isBalanceLoading = false; 
-            // Запускаем обновление
-            checkBalance();
-        });
-
-        // 3. Слушаем, когда окно браузера/webview снова становится активным
-        window.addEventListener('focus', function() {
-            setTimeout(() => {
-                isBalanceLoading = false;
-                checkBalance();
-            }, 100); 
-        });
-        
-        // 4. Слушаем переключение вкладок/видимости
-        document.addEventListener('visibilitychange', function() {
-            if (!document.hidden) {
-                isBalanceLoading = false;
-                checkBalance();
-            }
-        });
     </script>
 </body>
 </html>
