--- a/public/shop.html
+++ b/public/shop.html
@@ -1029,23 +1029,11 @@
             return text.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/"/g, "&quot;").replace(/'/g, "&#039;");
         }
 
-       // --- ЗАПУСК ТОЛЬКО ПРИ СТАРТЕ ---
-
-        // 1. Запускаем загрузку товаров
-        initShop(); 
+        // --- ЗАПУСК ---
         
-        // 2. ПЕРВЫЙ ЗАПРОС (Тихий): 
-        // false означает "не обновляй цифры на экране".
-        // Пользователь видит "...", пока сервер обновляет базу.
-        checkBalance(false);
-
-        // 3. ВТОРОЙ ЗАПРОС (Через 1.5 сек, Громкий): 
-        // true означает "покажи цифры".
-        // Забираем уже обновленные данные и показываем их.
-        setTimeout(() => {
-            isBalanceLoading = false; 
-            checkBalance(true); 
-        }, 1500);
+        // Достаточно вызвать только это. 
+        // Вся логика (тихий запрос + таймер на 2.5 сек) теперь находится ВНУТРИ этой функции.
+        initShop();
     </script>
 </body>
 </html>
