--- a/public/halloween.html
+++ b/public/halloween.html
@@ -48,7 +48,7 @@
 
         <div class="rules-button-container" style="display: flex; gap: 10px; justify-content: center;">
             <button id="rules-button" class="rules-button">КАК ИГРАТЬ?</button>
-            <button id="rewards-list-button" class="rules-button" style="background: linear-gradient(45deg, #FFC107, #FF9800);">ПРИЗЫ</button>
+            <button id="rewards-list-button" class="rules-button" style="background: linear-gradient(45deg, #FFC107, #FF9800);">НАГРАДЫ</button>
         </div>
         
         <div class="page-layout">
