--- a/public/shop.html
+++ b/public/shop.html
@@ -585,16 +585,22 @@
             letter-spacing: 0.5px;
         }
         /* --- АДМИН МЕНЮ (FAB) --- */
-        .admin-fab-container {
-            position: fixed;
-            bottom: 90px; /* Чуть выше футера */
-            left: 16px;
-            z-index: 9990;
+        .admin-fab-btn {
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            /* Полупрозрачный фон */
+            background: rgba(28, 28, 30, 0.4); 
+            backdrop-filter: blur(5px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: rgba(255, 255, 255, 0.5); /* Бледный цвет иконки */
             display: flex;
-            flex-direction: column-reverse;
             align-items: center;
-            gap: 10px;
-            display: none; /* Скрыто по умолчанию */
+            justify-content: center;
+            font-size: 14px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
         }
 
         .admin-fab-btn {
