--- a/public/shop.html
+++ b/public/shop.html
@@ -819,7 +819,7 @@
         <div class="loader-text">Оформляем покупку...</div>
     </div>
     
-    <div id="admin-fab" class="admin-fab-container">
+    <div id="admin-fab" class="admin-wrapper" style="display: none;">
         <div class="admin-fab-btn toggle" onclick="toggleAdminMenu()">
             <i class="fa-solid fa-chevron-up"></i>
         </div>
