--- a/public/menu.html
+++ b/public/menu.html
@@ -58,8 +58,8 @@
     
         <div id="main-slider-container" class="slider-container">
                 <div class="slider-wrapper">
-                        <a href="/events" class="slide" data-event="skin_race">
-                                <img id="menu-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Гонка за скинами">
+                        <a href="/slay" class="slide" data-event="skin_race">
+                                <img id="menu-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Голосуй за лучших!">
                         </a>
                        <a href="/halloween" class="slide" data-event="cauldron">
                                 <img src="https://i.postimg.cc/CKKLsnVw/1200-600-hallowen.png" alt="Хэллоуин Ивент">
