--- a/public/slay.html
+++ b/public/slay.html
@@ -107,9 +107,9 @@
         }
         
         @keyframes pulseText {
-            0% { opacity: 0.8; transform: scale(1); text-shadow: 0 0 10px rgba(255,215,0,0.2); }
-            50% { opacity: 1; transform: scale(1.05); text-shadow: 0 0 20px rgba(255,215,0,0.5); }
-            100% { opacity: 0.8; transform: scale(1); text-shadow: 0 0 10px rgba(255,215,0,0.2); }
+            0% { opacity: 0.8; text-shadow: 0 0 10px rgba(255,215,0,0.2); }
+            50% { opacity: 1; text-shadow: 0 0 20px rgba(255,215,0,0.5); }
+            100% { opacity: 0.8; text-shadow: 0 0 10px rgba(255,215,0,0.2); }
         }
 
         .rewards-btn {
