--- a/public/slay.html
+++ b/public/slay.html
@@ -587,7 +587,7 @@
             <div class="icon-wrapper"><i class="fa-solid fa-check-double"></i></div>
             <span>Задания</span>
         </a>
-        <a href="/menu" class="footer-item active gold-glow"> <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
+        <a href="/menu" class="footer-item"> <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
             <span>Главная</span>
         </a>
         <a href="/events" class="footer-item">
