--- a/public/slay.html
+++ b/public/slay.html
@@ -533,7 +533,7 @@
             <div class="modal-title" id="vote-title">...</div>
             <button class="close-btn" onclick="closeModal('vote-modal')"><i class="fa-solid fa-xmark"></i></button>
         </div>
-        <div class="modal-body" id="vote-list-container">
+        <div class="modal-body" id="vote-list"></div>
             </div>
     </div>
 
