--- a/public/slay.html
+++ b/public/slay.html
@@ -503,6 +503,16 @@
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.4);
     border: 2px solid var(--gold);
 }
+        .cand-row {
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between;
+    padding: 16px; 
+    border-bottom: 1px solid rgba(255,255,255,0.05);
+    background: rgba(255,255,255,0.02);
+    border-radius: 12px;
+    margin-bottom: 8px;
+}
 
     </style>
 </head>
@@ -758,6 +768,13 @@
                 grid.appendChild(card);
             });
         }
+
+        // === ЭТОЙ ФУНКЦИИ НЕ ХВАТАЛО ===
+function closeModal(id) { 
+    document.getElementById(id).classList.remove('active');
+    // Если нужно разблокировать скролл страницы:
+    document.body.classList.remove('modal-open'); 
+}
 
         // --- VOTE MODAL (UPDATED GRID) ---
        let currentNominationId = null; // ID текущей номинации
