--- a/public/slay.html
+++ b/public/slay.html
@@ -802,7 +802,7 @@
                             <div class="card-overlay">
                                 <div class="card-title">${escapeHTML(nom.title)}</div>
                                 <div style="margin-top:20px;">
-                                    <div class="legend-label">ЛЕГЕНДА ГОДА:</div>
+                                    <div class="legend-label">ПОБЕДИТЕЛЬ:</div>
                                     <div class="legend-name">${escapeHTML(nom.winner_name || "Unknown")}</div>
                                 </div>
                             </div>
